# nessie-python-datasource-plugin

./: README.md  main.py  pyproject.toml
src/nessie_python_datasource_plugin/: __init__.py
