[project]
name = "nessie-python-datasource-plugin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["nessie-api"]

[project.entry-points.nessie_plugins]
source_python = "nessie_python_datasource_plugin:get_plugin_data"

[dependency-groups]
dev = ["coverage>=7.13.4", "mypy>=1.19.1", "pytest>=9.0.2", "ruff>=0.15.5"]

[tool.uv.sources]
nessie-api = { git = "https://github.com/Nessie-org/nessie-api.git" }
